...
            android:id="@+id/player_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />
        <ImageButton
            android:id="@+id/player_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
...
            android:src="@drawable/ic_player_placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/player_start"
            app:layout_constraintEnd_toStartOf="@id/player_end"
            app:layout_constraintTop_toBottomOf="@id/player_back" />
        <TextView
            android:id="@+id/player_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_primary"
            android:textSize="22sp"
...
